@@ -108,6 +108,15 @@ import|;
 end_import
 begin_import
 import|import
+name|java
+operator|.
+name|net
+operator|.
+name|MalformedURLException
+import|;
+end_import
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -382,6 +391,9 @@ operator|.
 name|SslContextFactory
 import|;
 end_import
+begin_comment
+comment|/**  * An {@link SSLConfig} that supports reading key/trust store information directly from resource   * files provided with the Solr test-framework classes  */
+end_comment
 begin_class
 DECL|class|SSLTestConfig
 specifier|public
@@ -390,6 +402,7 @@ name|SSLTestConfig
 extends|extends
 name|SSLConfig
 block|{
+comment|/** @deprecated No longer used except by {@link #setSSLSystemProperties} */
 DECL|field|TEST_KEYSTORE
 specifier|public
 specifier|static
@@ -414,6 +427,7 @@ argument_list|,
 literal|"../etc/test/solrtest.keystore"
 argument_list|)
 decl_stmt|;
+comment|/** @deprecated No longer used except by {@link #setSSLSystemProperties} */
 DECL|field|TEST_KEYSTORE_PATH
 specifier|private
 specifier|static
@@ -436,14 +450,37 @@ argument_list|()
 else|:
 literal|null
 decl_stmt|;
+DECL|field|TEST_KEYSTORE_RESOURCE
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|TEST_KEYSTORE_RESOURCE
+init|=
+literal|"SSLTestConfig.testing.keystore"
+decl_stmt|;
 DECL|field|TEST_KEYSTORE_PASSWORD
 specifier|private
 specifier|static
+specifier|final
 name|String
 name|TEST_KEYSTORE_PASSWORD
 init|=
 literal|"secret"
 decl_stmt|;
+DECL|field|keyStore
+specifier|private
+specifier|final
+name|Resource
+name|keyStore
+decl_stmt|;
+DECL|field|trustStore
+specifier|private
+specifier|final
+name|Resource
+name|trustStore
+decl_stmt|;
+comment|/** Creates an SSLTestConfig that does not use SSL or client authentication */
 DECL|method|SSLTestConfig
 specifier|public
 name|SSLTestConfig
@@ -457,6 +494,7 @@ literal|false
 argument_list|)
 expr_stmt|;
 block|}
+comment|/**     * Create an SSLTestConfig based on a few caller specified options.  As needed,     * keystore/truststore information will be pulled from a hardocded resource file provided     * by the solr test-framework.    *    * @param useSSL - wether SSL should be required.    * @param clientAuth - whether client authentication should be required.    */
 DECL|method|SSLTestConfig
 specifier|public
 name|SSLTestConfig
@@ -468,22 +506,59 @@ name|boolean
 name|clientAuth
 parameter_list|)
 block|{
-name|this
+name|super
 argument_list|(
 name|useSSL
 argument_list|,
 name|clientAuth
 argument_list|,
-name|TEST_KEYSTORE_PATH
+literal|null
 argument_list|,
 name|TEST_KEYSTORE_PASSWORD
 argument_list|,
-name|TEST_KEYSTORE_PATH
+literal|null
 argument_list|,
 name|TEST_KEYSTORE_PASSWORD
 argument_list|)
 expr_stmt|;
+name|trustStore
+operator|=
+name|keyStore
+operator|=
+name|Resource
+operator|.
+name|newClassPathResource
+argument_list|(
+name|TEST_KEYSTORE_RESOURCE
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+literal|null
+operator|==
+name|keyStore
+operator|||
+operator|!
+name|keyStore
+operator|.
+name|exists
+argument_list|()
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalStateException
+argument_list|(
+literal|"Unable to locate keystore resource file in classpath: "
+operator|+
+name|TEST_KEYSTORE_RESOURCE
+argument_list|)
+throw|;
 block|}
+block|}
+comment|/**     * Create an SSLTestConfig using explicit paths for files     * @deprecated - use {@link SSLConfig} directly    */
+annotation|@
+name|Deprecated
 DECL|method|SSLTestConfig
 specifier|public
 name|SSLTestConfig
@@ -522,6 +597,154 @@ argument_list|,
 name|trustStorePassword
 argument_list|)
 expr_stmt|;
+name|this
+operator|.
+name|keyStore
+operator|=
+name|tryNewResource
+argument_list|(
+name|keyStore
+argument_list|,
+literal|"KeyStore"
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|trustStore
+operator|=
+name|tryNewResource
+argument_list|(
+name|trustStore
+argument_list|,
+literal|"TrustStore"
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**    * Helper utility for building resources from arbitrary user input paths/urls    * if input is null, returns null; otherwise attempts to build Resource and verifies that Resource exists.    */
+DECL|method|tryNewResource
+specifier|private
+specifier|static
+specifier|final
+name|Resource
+name|tryNewResource
+parameter_list|(
+name|String
+name|userInput
+parameter_list|,
+name|String
+name|type
+parameter_list|)
+block|{
+if|if
+condition|(
+literal|null
+operator|==
+name|userInput
+condition|)
+block|{
+return|return
+literal|null
+return|;
+block|}
+name|Resource
+name|result
+decl_stmt|;
+try|try
+block|{
+name|result
+operator|=
+name|Resource
+operator|.
+name|newResource
+argument_list|(
+name|userInput
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|MalformedURLException
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"Can't build "
+operator|+
+name|type
+operator|+
+literal|" Resource: "
+operator|+
+name|e
+operator|.
+name|getMessage
+argument_list|()
+argument_list|,
+name|e
+argument_list|)
+throw|;
+block|}
+if|if
+condition|(
+operator|!
+name|result
+operator|.
+name|exists
+argument_list|()
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+name|type
+operator|+
+literal|" Resource does not exist "
+operator|+
+name|result
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+throw|;
+block|}
+return|return
+name|result
+return|;
+block|}
+comment|/** NOTE: This method is meaningless unless you explicitly provide paths when constructing this instance     * @see #SSLTestConfig(boolean,boolean,String,String,String,String)    */
+annotation|@
+name|Override
+DECL|method|getKeyStore
+specifier|public
+name|String
+name|getKeyStore
+parameter_list|()
+block|{
+return|return
+name|super
+operator|.
+name|getKeyStore
+argument_list|()
+return|;
+block|}
+comment|/** NOTE: This method is meaningless unless you explicitly provide paths when constructing this instance     * @see #SSLTestConfig(boolean,boolean,String,String,String,String)    */
+annotation|@
+name|Override
+DECL|method|getTrustStore
+specifier|public
+name|String
+name|getTrustStore
+parameter_list|()
+block|{
+return|return
+name|super
+operator|.
+name|getTrustStore
+argument_list|()
+return|;
 block|}
 comment|/**    * Creates a {@link SchemaRegistryProvider} for HTTP<b>clients</b> to use when communicating with servers     * which have been configured based on the settings of this object.  When {@link #isSSLMode} is true, this     *<code>SchemaRegistryProvider</code> will<i>only</i> support HTTPS (no HTTP scheme) using the     * appropriate certs.  When {@link #isSSLMode} is false,<i>only</i> HTTP (no HTTPS scheme) will be     * supported.    */
 DECL|method|buildClientSchemaRegistryProvider
@@ -606,8 +829,7 @@ name|loadTrustMaterial
 argument_list|(
 name|buildKeyStore
 argument_list|(
-name|getKeyStore
-argument_list|()
+name|keyStore
 argument_list|,
 name|getKeyStorePassword
 argument_list|()
@@ -633,8 +855,7 @@ name|loadKeyMaterial
 argument_list|(
 name|buildKeyStore
 argument_list|(
-name|getTrustStore
-argument_list|()
+name|trustStore
 argument_list|,
 name|getTrustStorePassword
 argument_list|()
@@ -697,8 +918,7 @@ name|loadKeyMaterial
 argument_list|(
 name|buildKeyStore
 argument_list|(
-name|getKeyStore
-argument_list|()
+name|keyStore
 argument_list|,
 name|getKeyStorePassword
 argument_list|()
@@ -723,8 +943,7 @@ name|loadTrustMaterial
 argument_list|(
 name|buildKeyStore
 argument_list|(
-name|getTrustStore
-argument_list|()
+name|trustStore
 argument_list|,
 name|getTrustStorePassword
 argument_list|()
@@ -827,8 +1046,8 @@ specifier|static
 name|KeyStore
 name|buildKeyStore
 parameter_list|(
-name|String
-name|keyStoreLocation
+name|Resource
+name|resource
 parameter_list|,
 name|String
 name|password
@@ -841,12 +1060,7 @@ name|CertificateUtils
 operator|.
 name|getKeyStore
 argument_list|(
-name|Resource
-operator|.
-name|newResource
-argument_list|(
-name|keyStoreLocation
-argument_list|)
+name|resource
 argument_list|,
 literal|"JKS"
 argument_list|,
@@ -866,9 +1080,12 @@ throw|throw
 operator|new
 name|IllegalStateException
 argument_list|(
-literal|"Unable to build KeyStore from file: "
+literal|"Unable to build KeyStore from resource: "
 operator|+
-name|keyStoreLocation
+name|resource
+operator|.
+name|getName
+argument_list|()
 argument_list|,
 name|ex
 argument_list|)
